--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 #default configurations
-server.port=8082
+server.port=8083
 
 #data access layer configurations
-spring.datasource.url=jdbc:mysql://localhost/cryptomami_db?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
-spring.datasource.username=cryptomami_admin
-spring.datasource.password=c_admin123
+spring.datasource.url=jdbc:mysql://localhost/venued_db?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.username=venued_admin
+spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
