ADD maven compiler properties to pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,8 @@
     <description>Venued</description>
     <properties>
         <java.version>19</java.version>
+        <maven.compiler.source>19</maven.compiler.source>
+        <maven.compiler.target>19</maven.compiler.target>
     </properties>
 
     <dependencies>
